--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,133 @@
-.App {
-  text-align: center;
-}
-
+/* Header */
 .App-logo {
-  height: 40vmin;
+  height: 56px;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
+  height: 120px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+header img {
+  display: inline;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header nav {
+  display: inline;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+header nav ul {
+  display: inline;
+  list-style-type: none;
+  padding: 0;
+  padding-left: 86px;
+  margin: 0;
+}
+
+header nav li {
+  display: inline;
+  padding-right: 30px;
+  text-transform: uppercase;
+}
+
+header nav a {
+  text-decoration: none;
+  color: black;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+header nav a:hover, header nav a:active {
+  text-decoration: none;
+  color: black;
+}
+
+/* Footer */
+
+footer {
+  background-color: rgba(73, 94, 87, 0.3);
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer img {
+  display: inline;
+  margin-right: 90px;
+}
+
+.Foot-logo {
+  height: 248px;
+  pointer-events: none;
+}
+
+footer .social {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+footer .contact {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+footer nav {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+footer ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+footer li {
+  padding: 2.5px;
+  color: black;
+  font-size: 24px;
+  font-weight: normal;
+  text-transform: capitalize;
+}
+
+footer a {
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+footer a:hover, footer a:active {
+  text-decoration: none;
+  color: black;
+}
+
+footer .footer-cat {
+  padding: 2.5px;
+  color: #495E57;
+  font-size: 24px;
+  font-weight: bolder;
+  text-transform: capitalize;
+  padding-bottom:7.5px;
+}
+
+.footer-text {
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items:start;
+  margin: 0;
+  padding: 0;
+}
+
+.mailto {
+  text-decoration: none;
+  text-transform: lowercase;
 }
